cmake_minimum_required(VERSION 3.16)
set(CMAKE_CXX_COMPILER "/usr/bin/clang++")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17 -g -pthread")
PROJECT(MyWebServer)
link_directories(/usr/local/lib)
INCLUDE_DIRECTORIES(include)
ADD_SUBDIRECTORY(src)
AUX_SOURCE_DIRECTORY(. DIR_ROOT_SRCS)
ADD_EXECUTABLE(MyWebServer ${DIR_ROOT_SRCS})
TARGET_LINK_LIBRARIES(MyWebServer MyServerLib)